aout: do not block thread changing volume/mute/device (fixes #8240)